Modificado los mensajes del análisis #44

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -115,6 +115,8 @@ choiceBox.YEAR_WEEK    = Weeks
 
 clustering.2Dgraph                       = 2D graph
 clustering.analyze                       = Analyze
+clustering.analyze.elbow                 = Elbow method
+clustering.analyze.silhouette            = Silhouette method
 clustering.centroid                      = Centroid
 clustering.centroids                     = Centroids
 clustering.cluster                       = Cluster
@@ -134,6 +136,7 @@ clustering.execute                       = Execute
 clustering.exportGrades                  = Export grades
 clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
+clustering.invalid                       = Invalid clutering algorithm.\r\nIt doesn't have the cluster number parameter.
 clustering.label                         = Label
 clustering.logsTypes                     = Types of logs
 clustering.maxIterations                 = Max number of iterations
@@ -143,6 +146,12 @@ clustering.numberOfClusters              = Number of clusters
 clustering.reduce                        = Reduce dimension
 clustering.silhouetteAnalysis            = Silhouette analysis
 clustering.table                         = Data table
+clustering.type.activity                 = Activity Completion
+clustering.type.grade                    = Grade
+clustering.type.logs.component           = Component
+clustering.type.logs.coursemodule        = Course Module
+clustering.type.logs.event               = Event
+clustering.type.logs.section             = Section
 
 cutGrade = Grade to pass
 
