--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -115,6 +115,8 @@ choiceBox.YEAR_WEEK    = Semanas
 
 clustering.2Dgraph                       = Gr\u00E1fico 2D
 clustering.analyze                       = Analizar
+clustering.analyze.elbow                 = M\u00E9todo del codo
+clustering.analyze.silhouette            = M\u00E9todo de silueta
 clustering.centroid                      = Centroide
 clustering.centroids                     = Centroides
 clustering.cluster                       = Agrupaci\u00F3n
@@ -134,6 +136,7 @@ clustering.execute                       = Ejecutar
 clustering.exportGrades                  = Exportar calificaciones
 clustering.fullname                      = Nombre
 clustering.fuzziness                     = Factor de borrosidad
+clustering.invalid                       = Algoritmo de agrupamiento invalido.\r\nNo tiene el par\u00E1metro de n\u00FAmero de agrupaciones.
 clustering.label                         = Etiquetar
 clustering.logsTypes                     = Tipos de registros
 clustering.maxIterations                 = M\u00E1x. n\u00FAmero de iteraciones
@@ -143,6 +146,12 @@ clustering.numberOfClusters              = N\u00FAmero de agrupaciones
 clustering.reduce                        = Reducir dimensi\u00F3n
 clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
 clustering.table                         = Tabla de datos
+clustering.type.activity                 = Finalizaci\u00F3n Actividad
+clustering.type.grade                    = Calificaci\u00F3n
+clustering.type.logs.component           = Componente
+clustering.type.logs.coursemodule        = M\u00F3dulo curso
+clustering.type.logs.event               = Evento
+clustering.type.logs.section             = Secci\u00F3n
 
 cutGrade = Nota de corte
 
