Added bubble chart

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -581,7 +581,7 @@ log.event.submission_assessed                                   = Tramesa avalua
 log.event.submission_assessments_cleared                        = S'ha suprimit les avaluacions de la tramesa
 log.event.submission_confirmation_form_viewed                   = S'ha visualitzat el formulari de confirmaci\u00F3 de la tramesa.
 log.event.submission_created                                    = S'ha creat la tramesa.
-log.event.submission_created_                                   = S'ha creat la tramesa.
+log.event.submission_created2                                   = S'ha creat la tramesa.
 log.event.submission_deleted                                    = Tramesa esborrada
 log.event.submission_deleted_                                   = Tramesa esborrada
 log.event.submission_form_viewed                                = S'ha visualitzat el formulari de tramesa.
@@ -759,6 +759,7 @@ tab.coursemodule       = M\u00F2duls del curs
 tab.event              = Esdeveniments
 tab.grades             = Graus
 tab.logs               = Registres
+tab.risk               = Risk of dropping out
 tab.section            = Secci\u00F3
 tab.visualization      = Visual analytic
 
