--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -581,7 +581,7 @@ log.event.submission_assessed                                   = Abgabe beurtei
 log.event.submission_assessments_cleared                        = Abgabebeurteilungen gel\u00F6scht
 log.event.submission_confirmation_form_viewed                   = Abgabebest\u00E4tigungsformular angesehen
 log.event.submission_created                                    = Abgabe angelegt
-log.event.submission_created_                                   = Abgabe angelegt
+log.event.submission_created2                                   = Abgabe angelegt
 log.event.submission_deleted                                    = Abgabe gel\u00F6scht
 log.event.submission_deleted_                                   = Abgabe gel\u00F6scht
 log.event.submission_form_viewed                                = Abgabeformular angezeigt
@@ -759,6 +759,7 @@ tab.coursemodule       = Kursmodule
 tab.event              = Veranstaltungen
 tab.grades             = Noten
 tab.logs               = Protokolle
+tab.risk               = Risk of dropping out
 tab.section            = Abschnitt
 tab.visualization      = Visual analytic
 
