--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -581,7 +581,7 @@ log.event.submission_assessed                                   = Submission ass
 log.event.submission_assessments_cleared                        = Submission assessments cleared
 log.event.submission_confirmation_form_viewed                   = Submission confirmation form viewed.
 log.event.submission_created                                    = Submission created.
-log.event.submission_created_                                   = Submission created.
+log.event.submission_created2                                   = Submission created.
 log.event.submission_deleted                                    = Submission deleted
 log.event.submission_deleted_                                   = Submission deleted
 log.event.submission_form_viewed                                = Submission form viewed.
@@ -759,6 +759,7 @@ tab.coursemodule       = Course Modules
 tab.event              = Events
 tab.grades             = Grades
 tab.logs               = Logs
+tab.risk               = Risk of dropping out
 tab.section            = Sections
 tab.visualization      = Visual analytic
 
