--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -581,7 +581,7 @@ log.event.submission_assessed                                   = Entrega evalua
 log.event.submission_assessments_cleared                        = Env\u00EDos de valoraciones limpiados
 log.event.submission_confirmation_form_viewed                   = Formulario de confirmaci\u00F3n de entrega visto.
 log.event.submission_created                                    = Entrega creada.
-log.event.submission_created_                                   = Entrega creada.
+log.event.submission_created2                                   = Entrega creada.
 log.event.submission_deleted                                    = Env\u00EDo borrado
 log.event.submission_deleted_                                   = Env\u00EDo borrado
 log.event.submission_form_viewed                                = Formulario de entrega visto.
@@ -759,6 +759,7 @@ tab.coursemodule       = M\u00F3dulos curso
 tab.event              = Eventos
 tab.grades             = Calificaciones
 tab.logs               = Registros
+tab.risk               = Riesgo de abandono
 tab.section            = Secci\u00F3n
 tab.visualization      = An\u00E1lisis visual
 
