--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -581,7 +581,7 @@ log.event.submission_assessed                                   = Travail evalu\
 log.event.submission_assessments_cleared                        = \u00C9valuations de travail effac\u00E9es
 log.event.submission_confirmation_form_viewed                   = Formulaire de confirmation de remise consult\u00E9
 log.event.submission_created                                    = Travail de devoir cr\u00E9\u00E9
-log.event.submission_created_                                   = Travail de devoir cr\u00E9\u00E9
+log.event.submission_created2                                   = Travail de devoir cr\u00E9\u00E9
 log.event.submission_deleted                                    = Travail supprim\u00E9
 log.event.submission_deleted_                                   = Travail supprim\u00E9
 log.event.submission_form_viewed                                = Formulaire de remise consult\u00E9
@@ -759,6 +759,7 @@ tab.coursemodule       = Modules de cours
 tab.event              = \u00C9v\u00E9nements
 tab.grades             = Les notes
 tab.logs               = Les journaux
+tab.risk               = Risk of dropping out
 tab.section            = Section
 tab.visualization      = Visual analytic
 
