--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -581,7 +581,7 @@ log.event.submission_assessed                                   = Valutata conse
 log.event.submission_assessments_cleared                        = Eliminate valutazioni consegna
 log.event.submission_confirmation_form_viewed                   = Visualizzata scheda di conferma consegna
 log.event.submission_created                                    = Creata consegna
-log.event.submission_created_                                   = Creata consegna
+log.event.submission_created2                                   = Creata consegna
 log.event.submission_deleted                                    = Eliminata consegna
 log.event.submission_deleted_                                   = Eliminata consegna
 log.event.submission_form_viewed                                = Visualizzata scheda di consegna
@@ -759,6 +759,7 @@ tab.coursemodule       = Moduli del corso
 tab.event              = eventi
 tab.grades             = gradi
 tab.logs               = logs
+tab.risk               = Risk of dropping out
 tab.section            = Sezione
 tab.visualization      = Visual analytic
 
