--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -581,7 +581,7 @@ log.event.submission_assessed                                   = Submiss\u00E3o
 log.event.submission_assessments_cleared                        = Avalia\u00E7\u00F5es da submiss\u00E3o limpas
 log.event.submission_confirmation_form_viewed                   = Formul\u00E1rio de confirma\u00E7\u00E3o de submiss\u00E3o visualizado.
 log.event.submission_created                                    = Submiss\u00E3o criada.
-log.event.submission_created_                                   = Submiss\u00E3o criada.
+log.event.submission_created2                                   = Submiss\u00E3o criada.
 log.event.submission_deleted                                    = Submiss\u00E3o apagada
 log.event.submission_deleted_                                   = Submiss\u00E3o apagada
 log.event.submission_form_viewed                                = Formul\u00E1rio de submiss\u00E3o visualizado.
@@ -759,6 +759,7 @@ tab.coursemodule       = M\u00F3dulos do curso
 tab.event              = Eventos
 tab.grades             = Notas
 tab.logs               = Logs
+tab.risk               = Risk of dropping out
 tab.section            = Se\u00E7\u00E3o
 tab.visualization      = Visual analytic
 
