Bubble chart completed

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -6,6 +6,9 @@ BOXPLOT = Diagramacaja
 BOXPLOT.xAxisTitle = Els elements de qualificaci\u00F3
 BOXPLOT.yAxisTitle = Noten
 
+BUBBLE.xAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to the Course
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Els elements de qualificaci\u00F3
