--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -6,6 +6,9 @@ BOXPLOT = BoxPlot
 BOXPLOT.xAxisTitle = Grade Artikel
 BOXPLOT.yAxisTitle = Grades
 
+BUBBLE.xAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to Moodle
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Grade Artikel
