--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -6,6 +6,9 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = \u00CDtems de calificaci\u00F3n
 BOXPLOT.yAxisTitle = Calificaciones
 
+BUBBLE.xAxisTitle = D\u00EDas desde el \u00FAltimo acceso al Curso
+BUBBLE.yAxisTitle = D\u00EDas desde el \u00FAltimo acceso a Moodle
+
 CALIFICATION_BAR = Calificaciones %
 
 CALIFICATION_BAR.xAxisTitle = \u00CDtems de calificaci\u00F3n
