--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -6,6 +6,9 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = Alementi del grado
 BOXPLOT.yAxisTitle = Gradi
 
+BUBBLE.xAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to the Course
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Alementi del grado
