--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -6,6 +6,9 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = Artigos da categoria
 BOXPLOT.yAxisTitle = Notas
 
+BUBBLE.xAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to the Course
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Artigos da categoria
