--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -6,6 +6,9 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = Grade items
 BOXPLOT.yAxisTitle = Grades
 
+BUBBLE.xAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to the Course
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Grade items
