--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -6,6 +6,9 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = Articles de grade
 BOXPLOT.yAxisTitle = Grades
 
+BUBBLE.xAxisTitle = Days since the last access to the course
+BUBBLE.yAxisTitle = Days since the last access to the Course
+
 CALIFICATION_BAR = Grades %
 
 CALIFICATION_BAR.xAxisTitle = Articles de grade
