Fixed bug when change course

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -7,7 +7,7 @@ BOXPLOT.xAxisTitle = Els elements de qualificaci\u00F3
 BOXPLOT.yAxisTitle = Noten
 
 BUBBLE.xAxisTitle = Days since the last access to the Course
-BUBBLE.yAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to Moodle
 
 CALIFICATION_BAR = Grades %
 
