--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -7,7 +7,7 @@ BOXPLOT.xAxisTitle = Grade items
 BOXPLOT.yAxisTitle = Grades
 
 BUBBLE.xAxisTitle = Days since the last access to the Course
-BUBBLE.yAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to Moodle
 
 CALIFICATION_BAR = Grades %
 
