--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -7,7 +7,7 @@ BOXPLOT.xAxisTitle = Articles de grade
 BOXPLOT.yAxisTitle = Grades
 
 BUBBLE.xAxisTitle = Days since the last access to the course
-BUBBLE.yAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to Moodle
 
 CALIFICATION_BAR = Grades %
 
