--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -7,7 +7,7 @@ BOXPLOT.xAxisTitle = Artigos da categoria
 BOXPLOT.yAxisTitle = Notas
 
 BUBBLE.xAxisTitle = Days since the last access to the Course
-BUBBLE.yAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to Moodle
 
 CALIFICATION_BAR = Grades %
 
