--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -7,7 +7,7 @@ BOXPLOT.xAxisTitle = Alementi del grado
 BOXPLOT.yAxisTitle = Gradi
 
 BUBBLE.xAxisTitle = Days since the last access to the Course
-BUBBLE.yAxisTitle = Days since the last access to the Course
+BUBBLE.yAxisTitle = Days since the last access to Moodle
 
 CALIFICATION_BAR = Grades %
 
