Change to color interval bubbles

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -6,6 +6,8 @@ BOXPLOT = Diagramacaja
 BOXPLOT.xAxisTitle = Els elements de qualificaci\u00F3
 BOXPLOT.yAxisTitle = Noten
 
+BUBBLE = Engagement
+
 BUBBLE.xAxisTitle = Days since the last access to the Course
 BUBBLE.yAxisTitle = Days since the last access to Moodle
 
@@ -40,6 +42,10 @@ MEAN_DIFF.yAxisTitle = Registres
 RADAR = Radar
 
 SCATTER = Scatter
+
+SCATTER_USER = Users scatter
+
+SESSION = Session
 
 SESSION.xAxisTitle = {0}
 SESSION.yAxisTitle = Minutes (interval limit: {0})
