--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -6,6 +6,8 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = Grade items
 BOXPLOT.yAxisTitle = Grades
 
+BUBBLE = Engagement
+
 BUBBLE.xAxisTitle = Days since the last access to the Course
 BUBBLE.yAxisTitle = Days since the last access to Moodle
 
@@ -40,6 +42,10 @@ MEAN_DIFF.yAxisTitle = Logs
 RADAR = Radar
 
 SCATTER = Scatter
+
+SCATTER_USER = Users scatter
+
+SESSION = Session
 
 SESSION.xAxisTitle = {0}
 SESSION.yAxisTitle = Minutes (interval limit: {0})
