--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -6,6 +6,8 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = \u00CDtems de calificaci\u00F3n
 BOXPLOT.yAxisTitle = Calificaciones
 
+BUBBLE = Compromiso
+
 BUBBLE.xAxisTitle = D\u00EDas desde el \u00FAltimo acceso al Curso
 BUBBLE.yAxisTitle = D\u00EDas desde el \u00FAltimo acceso a Moodle
 
@@ -40,6 +42,10 @@ MEAN_DIFF.yAxisTitle = Registros
 RADAR = Radar
 
 SCATTER = Dispersi\u00F3n
+
+SCATTER_USER = Dispersi\u00F3n de usuarios
+
+SESSION = Sesi\u00F3n
 
 SESSION.xAxisTitle = {0}
 SESSION.yAxisTitle = Minutos (l\u00EDmite intervalo: {0})
