--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -6,6 +6,8 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = Artigos da categoria
 BOXPLOT.yAxisTitle = Notas
 
+BUBBLE = Engagement
+
 BUBBLE.xAxisTitle = Days since the last access to the Course
 BUBBLE.yAxisTitle = Days since the last access to Moodle
 
@@ -40,6 +42,10 @@ MEAN_DIFF.yAxisTitle = Hist\u00F3rico
 RADAR = Radar
 
 SCATTER = Scatter
+
+SCATTER_USER = Users scatter
+
+SESSION = Session
 
 SESSION.xAxisTitle = {0}
 SESSION.yAxisTitle = Minutes (interval limit: {0})
