--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -6,6 +6,8 @@ BOXPLOT = Boxplot
 BOXPLOT.xAxisTitle = Articles de grade
 BOXPLOT.yAxisTitle = Grades
 
+BUBBLE = Engagement
+
 BUBBLE.xAxisTitle = Days since the last access to the course
 BUBBLE.yAxisTitle = Days since the last access to Moodle
 
@@ -40,6 +42,10 @@ MEAN_DIFF.yAxisTitle = Journaux
 RADAR = Radar
 
 SCATTER = Scatter
+
+SCATTER_USER = Users scatter
+
+SESSION = Session
 
 SESSION.xAxisTitle = {0}
 SESSION.yAxisTitle = Minutes (interval limit: {0})
