Added bar chart

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -8,6 +8,7 @@ BOXPLOT.yAxisTitle = Calificaciones
 
 BUBBLE = Compromiso
 
+BUBBLE.limitDays  = L\u00EDmite m\u00E1ximo
 BUBBLE.xAxisTitle = D\u00EDas desde el \u00FAltimo acceso al Curso
 BUBBLE.yAxisTitle = D\u00EDas desde el \u00FAltimo acceso a Moodle
 
