--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -8,6 +8,7 @@ BOXPLOT.yAxisTitle = Gradi
 
 BUBBLE = Engagement
 
+BUBBLE.limitDays  = Maximum limit
 BUBBLE.xAxisTitle = Days since the last access to the Course
 BUBBLE.yAxisTitle = Days since the last access to Moodle
 
