Protoripo del cluster jerarquico #56

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -114,6 +114,7 @@ choiceBox.YEAR_QUARTER = Quarters
 choiceBox.YEAR_WEEK    = Weeks
 
 clustering.2Dgraph                       = 2D graph
+clustering.3Dgraph                       = 3D graph
 clustering.analyze                       = Analyze
 clustering.analyze.elbow                 = Elbow method
 clustering.analyze.silhouette            = Silhouette method
