--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -114,6 +114,7 @@ choiceBox.YEAR_QUARTER = Trimestres
 choiceBox.YEAR_WEEK    = Semanas
 
 clustering.2Dgraph                       = Gr\u00E1fico 2D
+clustering.3Dgraph                       = Gr\u00E1fico 3D
 clustering.analyze                       = Analizar
 clustering.analyze.elbow                 = M\u00E9todo del codo
 clustering.analyze.silhouette            = M\u00E9todo de silueta
