Mover cluster jerárquico #61

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -139,7 +139,7 @@ clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
 clustering.invalid                       = Invalid clutering algorithm.\r\nIt doesn't have the cluster number parameter.
 clustering.label                         = Label
-clustering.logsTypes                     = Types of logs
+clustering.logTypes                      = Types of logs
 clustering.maxIterations                 = Max number of iterations
 clustering.minPts                        = Min. points per cluster
 clustering.numTrials                     = Number of trial
