--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -139,7 +139,7 @@ clustering.fullname                      = Nombre
 clustering.fuzziness                     = Factor de borrosidad
 clustering.invalid                       = Algoritmo de agrupamiento invalido.\r\nNo tiene el par\u00E1metro de n\u00FAmero de agrupaciones.
 clustering.label                         = Etiquetar
-clustering.logsTypes                     = Tipos de registros
+clustering.logTypes                      = Tipos de registros
 clustering.maxIterations                 = M\u00E1x. n\u00FAmero de iteraciones
 clustering.minPts                        = M\u00EDn. de puntos por agrupaci\u00F3n
 clustering.numTrials                     = N\u00FAmero de intentos
