Added risk evolution bar

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -42,6 +42,15 @@ MEAN_DIFF.yAxisTitle = Registros
 
 RADAR = Radar
 
+RISK_BAR = Riesgo comparado
+
+RISK_BAR_TEMPORAL = Riesgo en curso
+
+RISK_BAR_TEMPORAL.xAxisTitle = Periodo [{0}, {1})
+RISK_BAR_TEMPORAL.yAxisTitle = # de usuarios
+
+RISK_EVOLUTION = Evoluci\u00F3n del riesgo
+
 SCATTER = Dispersi\u00F3n
 
 SCATTER_USER = Dispersi\u00F3n de usuarios
