--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -42,6 +42,15 @@ MEAN_DIFF.yAxisTitle = Hist\u00F3rico
 
 RADAR = Radar
 
+RISK_BAR = Compared risk
+
+RISK_BAR_TEMPORAL = Course risk
+
+RISK_BAR_TEMPORAL.xAxisTitle = Period [{0}, {1}]
+RISK_BAR_TEMPORAL.yAxisTitle = # of users
+
+RISK_EVOLUTION = Risk evolution
+
 SCATTER = Scatter
 
 SCATTER_USER = Users scatter
