--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -137,6 +137,7 @@ clustering.execute                       = Execute
 clustering.exportGrades                  = Export grades
 clustering.fullname                      = Name
 clustering.fuzziness                     = Fuzziness factor
+clustering.hierarchical                  = Hierarchical
 clustering.invalid                       = Invalid clutering algorithm.\r\nIt doesn't have the cluster number parameter.
 clustering.label                         = Label
 clustering.logTypes                      = Types of logs
@@ -146,6 +147,7 @@ clustering.numTrials                     = Number of trial
 clustering.numberOfClusters              = Number of clusters
 clustering.reduce                        = Reduce dimension
 clustering.silhouetteAnalysis            = Silhouette analysis
+clustering.standard                      = Standard
 clustering.table                         = Data table
 clustering.type.activity                 = Activity Completion
 clustering.type.grade                    = Grade
