--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -137,6 +137,7 @@ clustering.execute                       = Ejecutar
 clustering.exportGrades                  = Exportar calificaciones
 clustering.fullname                      = Nombre
 clustering.fuzziness                     = Factor de borrosidad
+clustering.hierarchical                  = Jer\u00E1rquico
 clustering.invalid                       = Algoritmo de agrupamiento invalido.\r\nNo tiene el par\u00E1metro de n\u00FAmero de agrupaciones.
 clustering.label                         = Etiquetar
 clustering.logTypes                      = Tipos de registros
@@ -146,6 +147,7 @@ clustering.numTrials                     = N\u00FAmero de intentos
 clustering.numberOfClusters              = N\u00FAmero de agrupaciones
 clustering.reduce                        = Reducir dimensi\u00F3n
 clustering.silhouetteAnalysis            = An\u00E1lisis de silueta
+clustering.standard                      = Normal
 clustering.table                         = Tabla de datos
 clustering.type.activity                 = Finalizaci\u00F3n Actividad
 clustering.type.grade                    = Calificaci\u00F3n
