--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -44,12 +44,18 @@ RADAR = Radar
 
 RISK_BAR = Riesgo comparado
 
+RISK_BAR.xAxisTitle          = D\u00EDas transcurridos del \u00FAltimo acceso hasta {0}
+RISK_BAR.yAxisTitle          = # de usuarios
+
 RISK_BAR_TEMPORAL = Riesgo en curso
 
 RISK_BAR_TEMPORAL.xAxisTitle = Periodo [{0}, {1})
 RISK_BAR_TEMPORAL.yAxisTitle = # de usuarios
 
 RISK_EVOLUTION = Evoluci\u00F3n del riesgo
+
+RISK_EVOLUTION.xAxisTitle = Media entre {0}: Periodo [{1}, {2})
+RISK_EVOLUTION.yAxisTitle = # de usuarios
 
 SCATTER = Dispersi\u00F3n
 
@@ -804,6 +810,7 @@ text.license            = Licencia: MIT
 text.minutes            = minutos
 text.moodle             = Moodle: 
 text.never              = Nunca
+text.noActivity         = Sin actividad
 text.nousers            = No hay coincidencias
 text.online_false       = Modo: Offline
 text.online_true        = Modo: Online
