--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -44,12 +44,18 @@ RADAR = Radar
 
 RISK_BAR = Compared risk
 
+RISK_BAR.xAxisTitle          = Days after the last access until {0}
+RISK_BAR.yAxisTitle          = # of users
+
 RISK_BAR_TEMPORAL = Course risk
 
 RISK_BAR_TEMPORAL.xAxisTitle = Period [{0}, {1})
 RISK_BAR_TEMPORAL.yAxisTitle = # of users
 
 RISK_EVOLUTION = Risk evolution
+
+RISK_EVOLUTION.xAxisTitle = Average between {0}: Period [{1}, {2})
+RISK_EVOLUTION.yAxisTitle = # of users
 
 SCATTER = Scatter
 
@@ -804,6 +810,7 @@ text.license            = License: MIT
 text.minutes            = Minutes
 text.moodle             = Moodle: 
 text.never              = Jamais
+text.noActivity         = No activity
 text.nousers            = Pas de co\u00EFncidences
 text.online_false       = Mode: Offline
 text.online_true        = Mode: Online
