Added message when have not permission to download log

--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -150,6 +150,7 @@ displayYScaleTitle = Titel der Y-Achse
 emptyGradeColor = Farbe leer Grad
 
 error.chargeconfiguration = Fehler bei der Konfiguration importieren
+error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
 error.fields              = Sie m\u00FCssen alle Felder ausf\u00FCllen.
 error.generateCharts      = Diagramme k\u00F6nnen nicht generiert werden.
