--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -150,6 +150,7 @@ displayYScaleTitle = T\u00EDtulo del eje Y
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
 error.chargeconfiguration = Error al importar la configuraci\u00F3n
+error.csvparsing          = Error al descargar el CSV de los registros. Probablemente no tengas permiso de acceso a los registros.
 error.downloadingdata     = Error al descargar los datos.
 error.fields              = Debes completar todos los campos.
 error.generateCharts      = No se han podido generar los gr\u00E1ficos.
