--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -150,6 +150,7 @@ displayYScaleTitle = Titre de l'axe Y
 emptyGradeColor = Couleur qualit\u00E9 vide
 
 error.chargeconfiguration = Erreur lors de l'importation de la configuration
+error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
 error.fields              = Vous devez remplir tous les champs.
 error.generateCharts      = Impossible de g\u00E9n\u00E9rer des graphiques.
