--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -150,6 +150,7 @@ displayYScaleTitle = T\u00EDtulo do eixo Y
 emptyGradeColor = Cor grau vazia
 
 error.chargeconfiguration = Erro ao importar a configura\u00E7\u00E3o
+error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
 error.fields              = Voc\u00EA tem que completar todos os campos.
 error.generateCharts      = N\u00E3o \u00E9 poss\u00EDvel gerar gr\u00E1ficos.
