--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -150,6 +150,7 @@ displayYScaleTitle = T\u00EDtol de l'eix I
 emptyGradeColor = El color de grau buida
 
 error.chargeconfiguration = Error a l'importar la configuraci\u00F3
+error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
 error.fields              = Heu de completar tots els camps.
 error.generateCharts      = No es poden generar gr\u00E0fics.
