--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -150,6 +150,7 @@ displayYScaleTitle = Title Y-axis
 emptyGradeColor = Color empty grade
 
 error.chargeconfiguration = Error when importing the configuration
+error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
 error.fields              = You have to complete all the fields.
 error.generateCharts      = Can't generate charts.
