--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -150,6 +150,7 @@ displayYScaleTitle = Titolo asse Y
 emptyGradeColor = Colore grade vuoto
 
 error.chargeconfiguration = Errore durante l'importazione della configurazione
+error.csvparsing          = Error when downloading the log CSV. You probably don't have permission to access the log.
 error.downloadingdata     = Error when downloading data.
 error.fields              = Devi completare tutti i campi.
 error.generateCharts      = Non posso generare grafici.
